package dev.rodrilang.tennis_tournaments.enums;

public enum StatusType {

    NOT_STARTED,
    IN_PROGRESS,
    FINISHED
}
